--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "scripts": {
         "start": "node server.js"
     },
+    "engines": {
+        "node": "20.2.0",
+        "npm": "9.6.6"
+    },
     "main": "server.js",
     "license": "MIT",
     "private": true,
